--- a/angular.json
+++ b/angular.json
@@ -62,7 +62,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "robusta-weather-app:build"
+            "browserTarget": "robusta-weather-app:build",
+            "proxyConfig": "src/proxy.config.json"
           },
           "configurations": {
             "production": {
