--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "core-js": "^2.5.4",
     "ngx-spinner": "^7.2.0",
     "rxjs": "~6.3.3",
+    "sass": "^1.58.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
