--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~7.2.0",
     "angular-svg-icon": "^6.0.0",
     "core-js": "^2.5.4",
+    "firebase": "^9.17.1",
     "ngx-spinner": "^7.2.0",
     "rxjs": "~6.3.3",
     "sass": "^1.58.0",
